force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <label>Quota</label>
    <nameField>
        <label>Quota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>