force-app/main/default/objects/Quota__c/fields/Account_Plan_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Account_ID__c</fullName>
    <formula>Account_Plan__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Account ID</label>
    <type>Text</type>
</CustomField>