force-app/main/default/objects/Quota__c/fields/Account_Plan_Q1__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Q1__c</fullName>
    <formula>Account_Plan__r.Q1_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>