force-app/main/default/objects/Quota__c/fields/Account_Plan_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Sales_Target__c</fullName>
    <formula>Account_Plan__r.Sales_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Sales Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>