force-app/main/default/objects/Quota__c/fields/Period_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Period_Account_Plan__c</fullName>
    <formula>TEXT( Account_Plan__r.Period__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Period</label>
    <type>Text</type>
</CustomField>