force-app/main/default/objects/Quota__c/fields/Q1_Quota_Sales_Rep1__c.field-meta.xml
<CustomField>
    <fullName>Q1_Quota_Sales_Rep1__c</fullName>
    <label>Q1 Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>