force-app/main/default/objects/Quota__c/fields/Q3_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q3_Quota__c</fullName>
    <label>Q3 Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>