force-app/main/default/objects/Quota__c/fields/Quota_Total__c.field-meta.xml
<CustomField>
    <fullName>Quota_Total__c</fullName>
    <description>Annual Quota for the Year</description>
    <formula>Q1_Quota_Sales_Rep1__c +  Q2_Quota__c + Q3_Quota__c + Q4_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Quota for the Year per Sales Rep</inlineHelpText>
    <label>Quota Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>