force-app/main/default/objects/Quota__c/fields/Sales_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>