force-app/main/default/objects/Quota__c/listViews/Quotas.listView-meta.xml
<ListView>
    <fullName>Quotas</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Plan__c</columns>
    <columns>Q1_Quota_Sales_Rep1__c</columns>
    <columns>Q2_Quota__c</columns>
    <columns>Q3_Quota__c</columns>
    <columns>Q4_Quota__c</columns>
    <columns>Sales_Rep_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>Quotas</label>
</ListView>